text-align correcton

--- a/main.css
+++ b/main.css
@@ -1,6 +1,4 @@
 body {
     background: darkolivegreen;
-}
-.center {
-    text-align: center; 
+    text-align: center;
 }
